feat: classes
